tests/baselines/reference/emptyMemberAccess.errors.txt
==== tests/cases/compiler/emptyMemberAccess.ts (1 errors) ====
    function getObj() {
    
       ().toString();
        ~
!!! error TS1109: Expression expected.
    
    }
     